# bball-app-template

./: .env.test  .gitignore  LICENSE  MIGRATION.md  README.md  docker-compose.yml  go.mod  main.go  main_test.go  pyproject.toml  requirements-dev.txt  requirements.txt  test_local.py
.github/: dependabot.yml
.github/workflows/: DEPENDABOT-SETUP.md  bootstrap.yml  branches.yml  dependabot-automerge.yml  dependabot-build.yml  main.yml
cmd/lambda/: main.go
internal/handler/: handler.go  handler_test.go
scripts/: run_integration_tests.bat  run_integration_tests.sh
src/: __init__.py  handler.py
src/database/: database.py
src/jobs/: __init__.py  kaggle_ingest.py
src/messaging/: __init__.py  handler.py
src/messaging/schemas/: lambda-event-schema.json
src/model/: models.py
src/repository/: __init__.py  repository.py
src/service/: __init__.py  service.py
terraform/: README.md
terraform/bootstrap/: DEPLOYMENT.md  README.md  backend.tf  database.tf  github-oidc.tf  iam-pipeline-permissions.tf  main.tf  outputs.tf  s3-data-buckets.tf  s3-state-backend.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/resources/: DEPLOYMENT.md  README.md  backend.tf  cloudwatch-alarms.tf  data.tf  database.tf  dynamodb.tf  event-bridge-event-rule-kaggle.tf  event-bridge-event-rule-scheduler.tf  event-bridge-scheduler.tf  iam_kaggle.tf  lambda.tf  live.tfvars  main.tf  nonlive.tfvars  outputs.tf  providers.tf  sqs-dlq.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_handler.py
tests/integration/: test_database_integration.py  test_dynamodb_integration.py
tests/unit/: test_handler.py  test_models.py  test_service.py
